spade-tests/src/snapshots/spade_tests__parser__missing_if_block_a.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> int<32> {
    if true 5 else { 4 }
}

error: Unexpected `integer`, expected a block
  ┌─ testinput:2:13
  │
2 │     if true 5 else { 4 }
  │             ^ expected a block here
